keeptrack/20-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keeptrack
  namespace: keeptrack
spec:
  selector:
    app: keeptrack
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
