keeptrack/52-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keeptrack
  namespace: keeptrack
spec:
  parentRefs:
    - name: main
      namespace: envoy-gateway-system
      sectionName: https-white-fm
  hostnames:
    - satellites.white.fm
  rules:
    - backendRefs:
        - name: keeptrack
          port: 80
